--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "match-sorter": "^2.3.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
